fix a buttonbox with a flex-wrap

--- a/style.css
+++ b/style.css
@@ -5,12 +5,14 @@ body {
 .buttonbox {
     background-color: #696969;
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
     padding: 50px;
     margin: 20px;
     border-radius: 8px;
     gap: 50px;
+    border: solid white 4px;
 }
 
 .btn {
@@ -28,5 +30,7 @@ body {
     justify-content: center;
     align-items: center;
     margin-right: 50px;
+    margin-top: 50px;
+    font-size: 20px;
 
 }
